main/default/objects/Audit_Score_Card__c/Audit_Score_Card__c.object-meta.xml
<CustomObject>
    <description>Audit Score Cards</description>
    <label>Audit Score Card</label>
    <nameField>
        <label>Audit Score Cared</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Score Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>