main/default/objects/Audit_Score_Card__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <description>Formula</description>
    <inlineHelpText>Formula</inlineHelpText>
    <label>Formula</label>
    <length>5</length>
    <type>Text</type>
</CustomField>