main/default/objects/Audit_Score_Card__c/fields/PrdGrp2__c.field-meta.xml
<CustomField>
    <fullName>PrdGrp2__c</fullName>
    <description>Product Group 2 Count</description>
    <inlineHelpText>Product Group 2 Count</inlineHelpText>
    <label>PrdGrp2</label>
    <summarizedField>CountryScoreCard__c.PrdGrp2__c</summarizedField>
    <summaryForeignKey>CountryScoreCard__c.Audit_Score_Card__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>