main/default/objects/Audit_Score_Card__c/fields/Product_Group_3__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_3__c</fullName>
    <description>Product Group 3</description>
    <inlineHelpText>Product Group 3</inlineHelpText>
    <label>Product Group 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>