main/default/objects/Audit_Score_Card__c/fields/Report_Group_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Report_Group_Sequence__c</fullName>
    <description>Report Group Sequence</description>
    <inlineHelpText>Report Group Sequence</inlineHelpText>
    <label>Report Group Sequence</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>