main/default/objects/Audit_Score_Card__c/fields/Report_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Report_Sequence__c</fullName>
    <description>Report Sequence</description>
    <inlineHelpText>Report Sequence</inlineHelpText>
    <label>Report Sequence</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>