main/default/objects/Audit_Score_Card__c/fields/Score_Card_No__c.field-meta.xml
<CustomField>
    <fullName>Score_Card_No__c</fullName>
    <description>Score Card Number</description>
    <displayFormat>SC-{00000}</displayFormat>
    <inlineHelpText>Score Card Number</inlineHelpText>
    <label>Score Card Number</label>
    <type>AutoNumber</type>
</CustomField>