main/default/objects/Audit_Score_Card__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Score_Card_No__c</columns>
    <columns>NAME</columns>
    <columns>Report_Group_Sequence__c</columns>
    <columns>Report_Sequence__c</columns>
    <columns>Formula__c</columns>
    <columns>Product_Group_1__c</columns>
    <columns>Product_Group_2__c</columns>
    <columns>Product_Group_3__c</columns>
    <columns>Product_Group_4__c</columns>
    <columns>Product_Group_5__c</columns>
    <columns>Product_Group_6__c</columns>
    <columns>Product_Group_7__c</columns>
    <columns>Product_Group_8__c</columns>
    <columns>Product_Group_9__c</columns>
    <columns>Product_Group_10__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>